--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,112 @@
+.HeroSection {
+  width: 100%;
+  background: linear-gradient(
+    81deg,
+    #e7f0ff 9.01%,
+    rgba(232, 241, 255, 0.47) 89.11%
+  );
+}
 
-.HeroSection{
+.HeroSection > header {
+  display: flex;
+  margin: 0px 100px;
+  height: 96px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav a {
+  margin: 0px 25px;
+  color: rgba(16, 40, 81, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.nav :last-child {
+  background: rgba(42, 168, 255, 1);
+  width: 130px;
+  height: 40px;
+  border-radius: 8px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+  margin-left: 30px;
+}
+
+.heroContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 100px;
+}
+
+.heroText {
+  width: 45%;
+}
+
+.heroText > h3 {
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 68px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: rgba(16, 40, 81, 1);
+}
+
+.heroText > h3 > span:nth-child(1) {
+  color: rgba(0, 0, 0, 1);
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 68px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+
+.heroText > h3 > span:nth-child(2) {
+  color: rgba(42, 167, 255, 1);
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 68px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+
+.heroText > p {
+  color: rgba(92, 97, 105, 1);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+
+.heroText > button {
+  background-color: rgba(42, 168, 255, 1);
+  padding: 12px 36px 12px 36px;
+  border-radius: 8px;
+  margin: 30px 0px;
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+}
+
+.offer-img{
     width: 100%;
-    height: 832px;
-    background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);
+    background-color: #fff;
+    padding-top: 80px;
+    padding-bottom: 10px;
+}
 
+.offer {
+  width: 398px;
+  height: 199px;
+  border-radius: 20px;
+  margin: 40px 0px;
 }
