--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -43,6 +43,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 0px 100px;
+  margin-bottom: 250px;
 }
 
 .heroText {
@@ -97,11 +98,11 @@
   letter-spacing: 0.02em;
 }
 
-.offer-img{
-    width: 100%;
-    background-color: #fff;
-    padding-top: 80px;
-    padding-bottom: 10px;
+.offer-img {
+  width: 100%;
+  background-color: #fff;
+  padding-top: 150px;
+  padding-bottom: 10px;
 }
 
 .offer {
@@ -109,4 +110,108 @@
   height: 199px;
   border-radius: 20px;
   margin: 40px 0px;
+}
+
+.floating-div {
+  border: 1px solid rgba(240, 240, 240, 1);
+  width: 1170px;
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 6px 6px 35px 0px rgba(16, 40, 81, 0.11);
+  border-radius: 15px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 550px;
+  margin: auto;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin: 50px 0px;
+}
+
+.input-controll {
+  width: 285px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: rgba(250, 251, 254, 1);
+  border: 1px solid rgba(240, 240, 240, 1);
+  display: flex;
+  align-items: center;
+}
+
+.input-controll > img {
+  padding: 15px;
+}
+.input-controll > input {
+  padding: 10px 0px;
+  background-color: rgba(250, 251, 254, 1);
+  color: rgba(171, 182, 199, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+}
+
+.form > button {
+  width: 121px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: rgba(42, 168, 255, 1);
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  gap: 10px;
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+}
+
+.floating-div > h5 {
+  text-align: center;
+  color: rgba(16, 40, 81, 1);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+}
+
+.category {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  margin: 35px 0px;
+  gap: 20px;
+}
+
+.category > div {
+  width: 200px;
+  height: 150px;
+  border-radius: 8px;
+  background-color: rgba(250, 251, 254, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.category > div > img {
+  width: 60px;
+  height: 60px;
+}
+
+.category > div > h6 {
+  color: rgba(171, 182, 199, 1);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.02em;
 }
