--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,37 +7,6 @@
   );
 }
 
-.HeroSection > header {
-  display: flex;
-  margin: 0px 100px;
-  height: 96px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav a {
-  margin: 0px 25px;
-  color: rgba(16, 40, 81, 1);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-.nav :last-child {
-  background: rgba(42, 168, 255, 1);
-  width: 130px;
-  height: 40px;
-  border-radius: 8px;
-  color: rgba(255, 255, 255, 1);
-  font-family: Poppins;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 21px;
-  letter-spacing: 0.02em;
-  margin-left: 30px;
-}
-
 .heroContent {
   display: flex;
   align-items: center;
@@ -96,6 +65,7 @@
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.02em;
+  cursor: pointer;
 }
 
 .offer-img {
@@ -146,7 +116,7 @@
 .input-controll > img {
   padding: 15px;
 }
-.input-controll > input {
+.input-controll > select {
   padding: 10px 0px;
   background-color: rgba(250, 251, 254, 1);
   color: rgba(171, 182, 199, 1);
@@ -156,7 +126,7 @@
   letter-spacing: 0.02em;
 }
 
-.form > button {
+.search-btn {
   width: 121px;
   height: 50px;
   border-radius: 8px;
