--- a/src/components/FindDoctor.css
+++ b/src/components/FindDoctor.css
@@ -2,6 +2,14 @@
   height: 96px;
   background: linear-gradient(91.75deg, #2aa7ff 1.4%, #0c8ce6 100.57%);
   border-radius: 0px 0px 16px 16px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Ubuntu;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 45.96px;
+  display: flex;
+  align-items: center;
+  padding: 0px 100px;
 }
 
 .floating-form {
@@ -60,109 +68,25 @@
   width: 400px;
   height: 300px;
   margin: 20px 0px;
-  
 }
 
-.center {
+.medicalCenters > div > div > h1 {
   width: 786px;
   height: 269px;
-  border-radius: 15px;
-  padding: 24px;
-  background: rgba(255, 255, 255, 1);
-  margin: 20px 0px;
   display: flex;
-  gap: 25px;
+  align-items: center;
+  justify-content: center;
 }
 
-.middlecontent {
+.Nothing {
+  width: 100%;
+  height: 80vh;
+  background: linear-gradient(
+    81deg,
+    #e7f0ff 9.01%,
+    rgba(232, 241, 255, 0.47) 89.11%
+  );
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.middlecontent > h3 {
-  color: rgba(20, 190, 240, 1);
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 28px;
-  margin: 15px 0px;
-}
-.middlecontent > h6 {
-  color: rgba(65, 65, 70, 1);
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 19.6px;
-}
-
-.middlecontent > p {
-  color: rgba(65, 65, 70, 1);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 19.6px;
-}
-
-.middlecontent .free-span {
-  color: rgba(2, 164, 1, 1);
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 19.6px;
-}
-
-.middlecontent .price-span {
-  color: (120, 120, 135, 1);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 19.6px;
-  margin: 0px 10px;
-}
-
-.middlecontent .fee-span {
-  color: rgba(65, 65, 70, 1);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 19.6px;
-}
-
-.like-btn {
-  border-top: 1px solid rgba(232, 232, 240, 1);
-  width: 307.55px;
-  height: 39.5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-top: 10px;
-}
-
-.like-btn > img {
-  width: 44.08px;
-  height: 22.5px;
-}
-
-.rightcontent {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.rightcontent > p {
-  color: rgba(1, 164, 0, 1);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 19.6px;
-  text-align: center;
-  margin: 5px;
-}
-
-.rightcontent > button {
-  background-color: rgba(42, 167, 255, 1);
-  width: 212px;
-  height: 40px;
-  padding: 9.62px 28.55px 9.38px 29.45px;
-  border-radius: 4px;
-  color: rgba(255, 255, 255, 1);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 21px;
-  text-align: center;
-  margin: 5px;
+  align-items: center;
+  justify-content: center;
 }
