--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,32 +1,36 @@
-
 header {
-    display: flex;
-    margin: 0px 100px;
-    height: 96px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .nav a {
-    margin: 0px 25px;
-    color: rgba(16, 40, 81, 1);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    cursor: pointer;
-  }
-  
-  .nav :last-child {
-    background: rgba(42, 168, 255, 1);
-    width: 130px;
-    height: 40px;
-    border-radius: 8px;
-    color: rgba(255, 255, 255, 1);
-    font-family: Poppins;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 21px;
-    letter-spacing: 0.02em;
-    margin-left: 30px;
-  }
+  display: flex;
+  margin: 0px 100px;
+  height: 96px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header > img {
+  cursor: pointer;
+}
+
+.nav a {
+  margin: 0px 25px;
+  color: rgba(16, 40, 81, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  cursor: pointer;
+}
+
+.nav :last-child {
+  background: rgba(42, 168, 255, 1);
+  width: 130px;
+  height: 40px;
+  border-radius: 8px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+  margin-left: 30px;
+  cursor: pointer;
+}
