--- a/src/components/BlogAndNews.css
+++ b/src/components/BlogAndNews.css
@@ -1,6 +1,5 @@
-
-.BlogAndNews{
-    margin: 50px 0px;
+.BlogAndNews {
+  margin: 50px 0px;
 }
 
 .BlogAndNews > h4 {
@@ -33,8 +32,8 @@
   border-radius: 0px, 0px, 10px, 10px;
 }
 
-.content{
-    padding: 0px 15px 15px 15px;
+.content {
+  padding: 0px 15px 15px 15px;
 }
 
 .content > h5 {
@@ -46,38 +45,67 @@
 }
 
 .content > h5 > span {
-    color: rgba(221, 221, 221, 1);
-    margin: 0px 5px;
+  color: rgba(221, 221, 221, 1);
+  margin: 0px 5px;
 }
-
 
 .content > h3 {
   color: rgba(27, 60, 116, 1);
   font-size: 18px;
   font-weight: 500;
   line-height: 27px;
-
 }
 
-.editor{
+.editor {
+  display: flex;
+  align-items: center;
+}
+
+.content > div {
+  margin: 5px 0px;
+}
+
+.content > div > img {
+  width: 32px;
+  height: 32px;
+  margin-right: 15px;
+}
+.content > div > h4 {
+  color: rgba(27, 60, 116, 1);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 27px;
+}
+
+@media screen and (max-width: 480px) {
+  .BlogAndNews {
+    margin: 30px 0px;
+  }
+
+  .BlogAndNews > h4 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .BlogAndNews > h1 {
+    font-size: 28px;
+    line-height: 34px;
+    margin-bottom: 20px;
+  }
+
+  .blogs {
     display: flex;
+    flex-direction: column;
     align-items: center;
-}
+    justify-content: center;
+    gap: 20px;
+  }
 
-.content > div{
-    margin: 5px 0px;
-}
+  .card {
+    width: 300px;
+  }
 
-.content > div > img{
-    width: 32px;
-    height: 32px;
-    margin-right: 15px;
+  .card > img {
+    width: 100%;
+  }
 }
-.content > div > h4{
-    color: rgba(27, 60, 116, 1);
-font-size: 17px;
-font-weight: 500;
-line-height: 27px;
-}
-
-
