--- a/src/components/HeaderOne.css
+++ b/src/components/HeaderOne.css
@@ -4,7 +4,24 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
-  text-align: center;  
+  text-align: center;
   padding: 5px;
   color: rgba(255, 255, 255, 1);
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .header-one {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header-one {
+    font-size: 10px;
+    line-height: 15px;
+    padding: 10px;
+  }
 }
