--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -75,6 +75,10 @@
   padding-bottom: 10px;
 }
 
+.offer-img-sm{
+  display: none;
+}
+
 .offer {
   width: 398px;
   height: 199px;
@@ -196,4 +200,195 @@
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 0.02em;
+}
+
+
+
+
+@media screen and (max-width: 2560px){
+  .heroContent {
+    width: 70%;
+    margin: 0px auto;
+    margin-bottom: 250px;
+  }
+}
+@media screen and (max-width: 1440px){
+  .heroContent {
+    margin: 0px 100px;
+    margin-bottom: 250px;
+  }
+}
+
+
+
+
+
+@media screen and (max-width: 768px) {
+
+  .heroContent {
+    margin: 0px 30px;
+    margin-bottom: 250px;
+  }
+
+  .heroContent > img{
+    width: 55%;
+  }
+  
+  .heroText {
+    width: 45%;
+  }
+  
+  .heroText > h3 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+  
+  .heroText > h3 > span:nth-child(1) {
+    font-size: 36px;
+    line-height: 38px;
+  }
+  
+  .heroText > h3 > span:nth-child(2) {
+    font-size: 36px;
+    line-height: 38px;
+  }
+  
+  .heroText > p {
+    font-size: 15px;
+  }
+
+
+
+
+
+
+
+  .floating-div {
+    width: 80%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 440px;
+  }
+  
+  .form {
+    gap: 10px;
+    margin: 30px 20px;
+  }
+  
+  
+  .floating-div > h5 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+  }
+  
+  .category {
+    width: 100%;
+    margin: 10px 5px;
+    gap: 10px;
+  }
+  
+  .category > div {
+    width: 100px;
+    height: 100px;
+    gap: 10px;
+  }
+  
+  .category > div > img {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .category > div > h6 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+  }
+
+
+
+
+  
+
+
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 480px) {
+  .heroContent {
+    margin: 0px auto;
+    width: 320px;
+    margin-bottom: 20px;
+    padding: 0px 10px;
+  }
+
+  .heroContent > img{
+    display: none;
+  }
+  
+  .heroText {
+    width: 100%;
+  }
+  
+  .heroText > h3 {
+    font-size: 20px;
+    line-height: 38px;
+    letter-spacing: 0.01em;
+  }
+  
+  .heroText > h3 > span:nth-child(1) {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 38px;
+    letter-spacing: 0.02em;
+  }
+  
+  .heroText > h3 > span:nth-child(2) {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 38px;
+    letter-spacing: 0.02em;
+  }
+  
+  .heroText > p {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0.02em;
+  }
+
+
+
+
+  .floating-div {
+    display: none;
+  }
+
+
+
+  .offer-img{
+    display: none;
+  }
+
+  .offer-img-sm{
+    display: block;
+    width: 100%;
+    background-color: #fff;
+  }
+  
+  .offer {
+    width: 300px;
+    border-radius: 20px;
+  }
+  
+
+
 }
