--- a/src/components/OurTeam.css
+++ b/src/components/OurTeam.css
@@ -3,6 +3,10 @@
   padding: 50px 0px;
 }
 
+.OurTeam-sm{
+  display: none;
+}
+
 .OurTeam h1 {
   color: rgba(27, 60, 116, 1);
   font-size: 48px;
@@ -53,3 +57,66 @@
 }
 
 
+
+
+
+@media screen and (max-width: 480px) {
+  .OurTeam{
+    display: none;
+  }
+  
+  .OurTeam-sm{
+    display: block;
+  }
+
+  .OurTeam-sm h1 {
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 35px;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .profile-data{
+    width: 320px;
+    margin: 20px 0px;
+  }
+
+  .OurTeam-sm .profile {
+    height: 320px;
+    padding: 50px 17px 0px 17px;
+    border-radius: 250px 250px 4px 4px;
+    background: linear-gradient(144.2deg, #e1f3ff 0%, #2aa7ff 100%);
+    border: 10px solid rgba(255, 255, 255, 1);
+    box-shadow: 0px 15px 55px -10px rgba(0, 0, 0, 0.09);
+    border-bottom: none;
+  }
+  
+  .OurTeam-sm .image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .data{
+    margin: 2px 0px;
+  }
+  
+  .data > h1 {
+    color: rgba(27, 60, 116, 1);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+  }
+  
+  .data > p {
+    color: rgba(42, 167, 255, 1);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 29px;
+    text-align: center;
+  }
+  
+
+
+}
