--- a/src/components/DownloadSection.css
+++ b/src/components/DownloadSection.css
@@ -78,9 +78,105 @@
     margin: 35px 0px;
     display:flex ;
     gap: 20px;
+    cursor: pointer;
 }
 
 .apple-google > img{
     width: 224px;
     height: 69px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 480px) {
+  .DownloadSection {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+  
+  .mobile{
+    display: none;
+  }
+  .downarrow{
+    display: none;
+  }
+
+  .DownloadSection > div > h2 {
+    color: rgba(27, 60, 116, 1);
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 30px;
+    width: 320px;
+    margin: 10px 0px;
+  }
+  
+
+  
+  .DownloadSection > div > p {
+    color: rgba(65, 65, 70, 1);
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+  }
+  
+  .input-button {
+    display: flex;
+    align-items: center;
+  }
+  
+  .input {
+    margin: 10px 0px;
+    width: 220px;
+  }
+  
+  .input > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 49px;
+    border-right: 1px solid rgba(180, 180, 190, 0.3);
+  }
+
+  .input > input {
+    height: 49px;
+    padding: 0px 20px;
+    width: 100%;
+  }
+  
+  .Send-SMS {
+    background: rgba(42, 168, 255, 1);
+    width: 80px;
+    height: 50px;
+    margin: 15px;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0.01em;
+  }
+  
+  
+  .apple-google{
+      margin: 15px 0px;
+      display:flex ;
+      justify-content: center;
+      gap: 10px;
+  }
+  
+  .apple-google > img{
+      width: 120px;
+      height: 50px;
+  }
+  
+  
 }
