--- a/src/components/Appointments.css
+++ b/src/components/Appointments.css
@@ -96,3 +96,92 @@
     border-top: 1px solid rgba(240, 240, 245, 1);
     border-bottom: 1px solid rgba(240, 240, 245, 1);
 }
+
+
+
+
+
+@media screen and (max-width: 480px) {
+  .slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 4px solid rgba(240, 240, 245, 1);
+    cursor: pointer;
+    padding: 5px;
+    height: 75px;
+  }
+  
+  .slide > h1 {
+    font-size: 14px;
+  }
+  
+  .slide > span {
+    font-size: 14px;
+  }
+  
+  .slide.active {
+    border-bottom: 4px solid rgba(42, 167, 255, 1);
+  }
+  
+  .appointments {
+    width: 100%;
+    position: relative;
+  }
+  .appointments-container {
+    width: 100%;
+    margin: auto;
+  }
+  
+  .swiper-button-prev {
+    /* position: absolute;
+    top : 30px;
+    left: 0px; */
+    display: none;
+  }
+  
+  .swiper-button-next {
+    /* position: absolute;
+    top : 30px;
+    right: 0px; */
+    display: none;
+  }
+  
+  .slots {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .day {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      padding: 10px 0px;
+      gap: 10px;
+  }
+  
+  .day > h3 {
+    display: none;
+  }
+  
+  .day > div {
+    width: 44px;
+    height: 50px;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid rgba(42, 167, 255, 1);
+    cursor: pointer;
+    font-family: Lato;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 19.6px;
+    text-align: center;
+    color: rgba(42, 167, 255, 1);
+  }
+  
+}
