--- a/src/components/FindDoctor.css
+++ b/src/components/FindDoctor.css
@@ -39,16 +39,36 @@
     #e7f0ff 9.01%,
     rgba(232, 241, 255, 0.47) 89.11%
   );
+  display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 
-.medicalCenters > h1 {
+
+
+
+.medicalCenters > img {
+  width: 400px;
+  height: 300px;
+  margin: 80px 0px;
+}
+
+.medicalCenters > div >  h1 {
+  width: 786px;
+  height: 269px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.info> h1 {
   font-size: 24px;
   font-weight: 500;
   line-height: 36px;
   color: rgba(0, 0, 0, 1);
 }
 
-.medicalCenters > h6 {
+.info > h6 {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -57,25 +77,6 @@
   align-items: center;
   gap: 25px;
   margin-bottom: 20px;
-}
-
-.medicalCenters > div {
-  display: flex;
-  gap: 40px;
-}
-
-.medicalCenters > div > img {
-  width: 400px;
-  height: 300px;
-  margin: 20px 0px;
-}
-
-.medicalCenters > div > div > h1 {
-  width: 786px;
-  height: 269px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .Nothing {
@@ -89,4 +90,92 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+
+
+@media screen and (max-width: 480px) {
+  .floating-form {
+    flex-direction: column;
+    gap: 15px;
+    width: 320px;
+    top: 200px;
+    padding: 15px;
+  }
+
+
+
+
+  .medicalCenters {
+    padding: 170px 0px;
+    display: flex;
+    justify-content: center;
+    gap: 0px;
+    width: 100%;
+  }
+  
+  
+  
+  
+  .medicalCenters > img {
+    /* width: 400px;
+    height: 300px;
+    margin: 80px 0px; */
+    display: none;
+  }
+  .medicalCenters > div {
+    /* width: 400px;
+    height: 300px; */
+    margin: 0px 0px;
+    width: 100%;
+  }
+  
+  .medicalCenters > div >  h1 {
+    width: 300px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .info{
+    text-align: center;
+
+  }
+  
+  .info> h1 {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    color: rgba(0, 0, 0, 1);
+  }
+  
+  .info > h6 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: rgba(120, 120, 135, 1);
+    display: flex;
+    align-items: center;
+    gap: 0px;
+    margin-bottom: 20px;
+    margin: auto;
+    width: 310px;
+  }
+  
+  .Nothing {
+    width: 100%;
+    height: 80vh;
+    background: linear-gradient(
+      81deg,
+      #e7f0ff 9.01%,
+      rgba(232, 241, 255, 0.47) 89.11%
+    );
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+
 }
