--- a/src/components/HospitalCenter.css
+++ b/src/components/HospitalCenter.css
@@ -149,3 +149,149 @@
   line-height: 19.6px;
   text-align: center;
 }
+
+
+
+
+
+
+
+@media screen and (max-width: 480px) {
+
+  .center {
+    margin: 20px auto;
+    width: 320px;
+  }
+  
+  
+  .upper {
+    width: 100%;
+    height: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0px;
+    padding: 3px;
+  }
+
+  .leftimg{
+    display: none;
+  }
+  
+  .middlecontent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  
+  .middlecontent > h3 {
+    color: rgba(20, 190, 240, 1);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 16px;
+    margin: 5px 0px;
+  }
+  .middlecontent > h6 {
+    color: rgba(65, 65, 70, 1);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 19.6px;
+  }
+  
+  .middlecontent > p {
+    color: rgba(65, 65, 70, 1);
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 19.6px;
+  }
+  
+  .middlecontent .free-span {
+    color: rgba(2, 164, 1, 1);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 19.6px;
+  }
+  
+  .middlecontent .price-span {
+    color: (120, 120, 135, 1);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19.6px;
+    margin: 0px 10px;
+  }
+  
+  .middlecontent .fee-span {
+    color: rgba(65, 65, 70, 1);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19.6px;
+  }
+  
+  .like-btn {
+    border-top: 1px solid rgba(232, 232, 240, 1);
+    width: 307.55px;
+    height: 39.5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .like-btn > img {
+    width: 44.08px;
+    height: 22.5px;
+  }
+  
+  .rightcontent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .rightcontent > p {
+    color: rgba(1, 164, 0, 1);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 19.6px;
+    text-align: center;
+    margin: auto;
+  }
+  
+  .rightcontent > button {
+    background-color: rgba(42, 167, 255, 1);
+    width: 212px;
+    height: 40px;
+    padding: 9.62px 28.55px 9.38px 29.45px;
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 1);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    text-align: center;
+    margin: auto;
+    cursor: pointer;
+  }
+
+  
+  .lower {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0px;
+    padding: 3px;
+  }
+  
+
+  .rightcontent-mybookings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: auto;
+  }
+  
+}
