--- a/src/components/MyBookings.css
+++ b/src/components/MyBookings.css
@@ -22,3 +22,40 @@
 .input-width{
     width: 545px;
 }
+
+
+
+@media screen and (max-width: 480px) {
+    .oralhealth{
+        display: none;
+    }
+
+    .floating-search{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+      
+        border: 1px solid rgba(240, 240, 240, 1);
+        width: 320px;
+        background: rgba(255, 255, 255, 1);
+        box-shadow: 6px 6px 35px 0px rgba(16, 40, 81, 0.11);
+        border-radius: 15px;
+        position: absolute;
+        right: 0px;
+        left: 0px;
+        top: 210px;
+        padding: 15px 0px;
+    }
+    
+    .input-width{
+        width: 300px;
+    }
+    .input-width > input {
+        width: 100%;
+    }
+}
+
+
+
